# CefHost

./: .gitignore  CMakeLists.txt  PROJECT_LOG.md  README.md  SKILLS.md  main.cpp  osr_handler.cpp  osr_handler.h  simple_app.cpp  simple_app.h
cef/: Doxyfile  MODULE.bazel  README.txt
cef/bazel/: variables.bzl
cef/include/: cef_version.h
include/: D3d11device.h  cef_browser_app.h  host_runtime_config.h  osr_handler.h
include/shm/: SharedConsoleBuffer.h  SharedControlBuffer.h  SharedFrameBuffer.h  SharedInputBuffer.h  SharedMemoryLayout.h
shm/: ControlBuffer.h  FrameBuffer.h  InputBuffer.h  SharedMemoryLayout.h
src/: cef_browser_app.cpp  host_runtime_config.cpp  main.cpp  osr_handler.cpp
